package com.company;

public interface AbruptMovement {
    public void badConsequence(Humanoid humanoid, Object object);
}
