package com.company;

public interface MayBeDamaged {
    public void damage(int hp_lost);
}
