package com.company;

public interface Movement {
    public void doMovement(Humanoid humanoid);
}
